2.0 style changes Fixed drop-down account menu so that it no longer behaves like a drop-down when the menu collapses on small viewports. On large screens added a right margin to the drop-down menu. Moved Logout to the bottom of the submenu. On large screens the drop-down now includes a divider above the logout option.

--- a/awx/ui/static/less/main-layout.less
+++ b/awx/ui/static/less/main-layout.less
@@ -36,6 +36,9 @@ body {
     .navbar-collapse {
         margin-left: 42px;
     }
+    .collapsed-option {
+        display: none;
+    }
 }
 
 #content-container {
@@ -54,7 +57,21 @@ body {
     display: block;
 }
 
+#account-submenu {
+    margin-right: 5px;
+}
 @media (max-width: 1075px) {
+
+    #main-menu-container {
+        .collapsed-option {
+            display: block;
+        }
+    }
+
+    #account-menu {
+        display: none;
+    }
+
     #socket-beacon-div {
         display: block;
         position: fixed;
